vest-dsl/test/bad/choice_arrays_unbound.vest
fmt = choose(@tag) {
  [0, 0, 0] => u8,
  [0, 0, 1] => u16,
  [0, 0, 2] => u24,
}
